# complaint-routing-ml

./: .gitignore  02_customer_registration.html  03_login.html  04_staff_portal.html  05_staff_registration.html  06_customer_dashboard.html  07_complaint_submission.html  08_operator_dashboard.html  09_reviewer_dashboard.html  README.md  Untitled.ipynb  api.py  api_render.py  db.py  db_render.py  init_db_render.py  pyproject.toml  reder_db_test.ipynb  requirements.txt
app/: config.py  database.py  db_setup.py  dependencies.py  logger.py  main.py
docs/: 01_data_preparation.md  01_departmental_classification_setup.md  02_baseline_model_training.md  02_text_length_and_vocabulary_analysis.md  03_data_split_and_id_strategy.md  04_baseline_multinomial_nb.md  05_tfidf_lr_department_classification.md  06_tfidf_svm_department_classification.md  07_priority_label_engineering.md  08_multinomial_nb_priority_model.md  consumer-complaint-ml-proposal.md  untitled.txt
models/: priority_model.joblib
notebooks/: 01_data_preparation.ipynb  01_departmental_classification_setup.ipynb  02_baseline_model.ipynb  02_baseline_model_training.ipynb  02_text_length_and_vocabulary_analysis.ipynb  03_BERT_model_department.ipynb  03_advanced_model.ipynb  03_advanced_model_training.ipynb  03_data_split_and_id_strategy.md.ipynb  04_baseline_multinomial_nb.ipynb  05_tfidf_lr_department_classification.ipynb  06_tfidf_svm_department_classification.ipynb  08_multinomial_nb_priority_model.ipynb  distilbert_base_uncased_priority.ipynb  render_db_test.ipynb
src/: preprocessing.py
static/: login.html  (+9 more)
(+26 files in other folders)
